# jnpython

./: pyproject.toml
.github/workflows/: codeql.yml  publish.yml  tests.yml
src/jnpython/: int_helper.py  misc.py
tests/: graphs_test.py  int_helper_test.py  misc_test.py
