[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jnpython"
version = "0.0.1"
authors = [
  { name="Johan Nilsson", email="author@example.com" },
]
description = "Misc python helper functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jnsoft/jnpython"
"Bug Tracker" = "https://github.com/jnsoft/jnpython/issues"